--- a/ansible/install_applications/vars/infra-mailhog.yml
+++ b/ansible/install_applications/vars/infra-mailhog.yml
@@ -4,7 +4,8 @@ mailhog:
   enabled: "{{ mailhog_enabled | default(True) }}"
 
   container:
-    image: "mailhog/mailhog:v1.0.0"
+    image: "mailhog/mailhog"
+    tag: "v1.0.0"
     requests_cpu: "{{ mailhog_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ mailhog_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ mailhog_container_limits_cpu | default('1000m') }}"
