--- a/ansible/install_applications/vars/infra-reloader.yml
+++ b/ansible/install_applications/vars/infra-reloader.yml
@@ -4,7 +4,8 @@ reloader:
   enabled: "{{ reloader_enabled | default(True) }}"
 
   container:
-    image: "stakater/reloader:v0.0.31"
+    image: "stakater/reloader"
+    tag: "v0.0.31"
     requests_cpu: "{{ reloader_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ reloader_container_requests_memory | default('128Mi') }}"
     limits_cpu: "{{ reloader_container_limits_cpu | default('250m') }}"
