--- a/ansible/install_applications/vars/infra-unifi.yml
+++ b/ansible/install_applications/vars/infra-unifi.yml
@@ -4,7 +4,8 @@ unifi:
   enabled: "{{ unifi_enabled | default(True) }}"
 
   container:
-    image: "linuxserver/unifi-controller:amd64-5.10.25-ls22"
+    image: "linuxserver/unifi-controller"
+    tag: "amd64-5.10.25-ls22"
     requests_cpu: "{{ unifi_container_requests_cpu | default('500m') }}"
     requests_memory: "{{ unifi_container_requests_memory | default('1024Mi') }}"
     limits_cpu: "{{ unifi_container_limits_cpu | default('1000m') }}"
