--- a/ansible/install_applications/vars/logging-elasticsearch.yml
+++ b/ansible/install_applications/vars/logging-elasticsearch.yml
@@ -4,7 +4,8 @@ elasticsearch:
   enabled: "{{ elasticsearch_enabled | default(True) }}"
 
   container:
-    image: "amazon/opendistro-for-elasticsearch:0.9.0"
+    image: "amazon/opendistro-for-elasticsearch"
+    tag: "0.9.0"
     requests_cpu: "{{ elasticsearch_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ elasticsearch_container_requests_memory | default('1024Mi') }}"
     limits_cpu: "{{ elasticsearch_container_limits_cpu | default('1000m') }}"
@@ -37,8 +38,9 @@ elasticsearch:
 
 elasticsearch_exporter:
   container:
+    image: "justwatch/elasticsearch_exporter"
     # TODO change for a stable version when available. We need this RC to have the ssl-skip-verify flag
-    image: "justwatch/elasticsearch_exporter:1.1.0rc1"
+    tag: "1.1.0rc1"
     requests_cpu: "{{ elasticsearch_exporter_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ elasticsearch_exporter_container_requests_memory | default('64Mi') }}"
     limits_cpu: "{{ elasticsearch_exporter_container_limits_cpu | default('100m') }}"
