--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -5,6 +5,7 @@ pyload:
 
   container:
     image: "{{ docker_registry.url }}/pyload"
+    tag: "latest"
     from_image: "lsiobase/python:amd64-3.9"
     requests_cpu: "{{ pyload_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ pyload_container_requests_memory | default('256Mi') }}"
