--- a/ansible/install_applications/vars/home-mosquitto.yml
+++ b/ansible/install_applications/vars/home-mosquitto.yml
@@ -4,7 +4,8 @@ mosquitto:
   enabled: "{{ mosquitto_enabled | default(True) }}"
 
   container:
-    image: "eclipse-mosquitto:1.6.3"
+    image: "eclipse-mosquitto"
+    tag: "1.6.3"
     requests_cpu: "{{ mosquitto_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ mosquitto_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ mosquitto_container_limits_cpu | default('200m') }}"
