--- a/ansible/install_applications/vars/home-roomassistant.yml
+++ b/ansible/install_applications/vars/home-roomassistant.yml
@@ -4,7 +4,8 @@ roomassistant:
   enabled: "{{ roomassistant_enabled | default(True) }}"
 
   container:
-    image: "mkerix/room-assistant:1.1.1"
+    image: "mkerix/room-assistant"
+    tag: "1.1.1"
     requests_cpu: "{{ roomassistant_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ roomassistant_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ roomassistant_container_limits_cpu | default('250m') }}"
