--- a/ansible/install_applications/vars/infra-docker-registry-ui.yml
+++ b/ansible/install_applications/vars/infra-docker-registry-ui.yml
@@ -4,7 +4,8 @@ docker_registry_ui:
   enabled: "{{ docker_registry_ui_enabled | default(True) }}"
 
   container:
-    image: "quiq/docker-registry-ui:0.8.1"
+    image: "quiq/docker-registry-ui"
+    tag: "0.8.1"
     requests_cpu: "{{ docker_registry_ui_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ docker_registry_ui_container_requests_memory | default('32Mi') }}"
     limits_cpu: "{{ docker_registry_ui_container_limits_cpu | default('200m') }}"
