--- a/ansible/install_applications/vars/logging-fluentbit.yml
+++ b/ansible/install_applications/vars/logging-fluentbit.yml
@@ -4,7 +4,8 @@ fluentbit:
   enabled: "{{ fluentbit_enabled | default(True) }}"
 
   container:
-    image: "fluent/fluent-bit:1.1.3"
+    image: "fluent/fluent-bit"
+    tag: "1.1.3"
     requests_cpu: "{{ fluentbit_container_requests_cpu | default('5m') }}"
     requests_memory: "{{ fluentbit_container_requests_memory | default('10Mi') }}"
     limits_cpu: "{{ fluentbit_container_limits_cpu | default('50m') }}"
