--- a/ansible/install_applications/vars/logging-fluentd.yml
+++ b/ansible/install_applications/vars/logging-fluentd.yml
@@ -5,6 +5,7 @@ fluentd:
 
   container:
     image: "{{ docker_registry.url }}/fluentd"
+    tag: "latest"
     from_image: "fluent/fluentd:v1.5.2-debian-1.0"
     requests_cpu: "{{ fluentd_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ fluentd_container_requests_memory | default('200Mi') }}"
