--- a/ansible/install_applications/vars/monitoring-grafana.yml
+++ b/ansible/install_applications/vars/monitoring-grafana.yml
@@ -4,7 +4,8 @@ grafana:
   enabled: "{{ grafana_enabled | default(True) }}"
 
   container:
-    image: "grafana/grafana:6.0.1"
+    image: "grafana/grafana"
+    tag: "6.0.1"
     requests_cpu: "{{ grafana_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ grafana_container_requests_memory | default('100Mi') }}"
     limits_cpu: "{{ grafana_container_limits_cpu | default('200m') }}"
