--- a/ansible/install_applications/vars/stream-plex.yml
+++ b/ansible/install_applications/vars/stream-plex.yml
@@ -4,7 +4,8 @@ plex:
   enabled: "{{ plex_enabled | default(True) }}"
 
   container:
-    image: "plexinc/pms-docker:1.16.0.1226-7eb2c8f6f"
+    image: "plexinc/pms-docker"
+    tag: "1.16.0.1226-7eb2c8f6f"
     requests_cpu: "{{ plex_container_requests_cpu | default('500m') }}"
     requests_memory: "{{ plex_container_requests_memory | default('1024Mi') }}"
     limits_cpu: "{{ plex_container_limits_cpu | default('2000m') }}"
