--- a/ansible/install_applications/vars/web-heimdall.yml
+++ b/ansible/install_applications/vars/web-heimdall.yml
@@ -5,6 +5,7 @@ heimdall:
 
   container:
     image: "{{ docker_registry.url }}/heimdall"
+    tag: "latest"
     from_image: "linuxserver/heimdall:amd64-2.2.2-ls47"
     requests_cpu: "{{ heimdall_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ heimdall_container_requests_memory | default('128Mi') }}"
