--- a/ansible/install_applications/vars/web-ttrss.yml
+++ b/ansible/install_applications/vars/web-ttrss.yml
@@ -5,6 +5,7 @@ ttrss:
 
   container:
     image: "{{ docker_registry.url }}/ttrss"
+    tag: "latest"
     # Keep the image version in sync with the ttrss_pgsql.schema_url variable
     from_image: "linuxserver/tt-rss:amd64-19.2-ls21"
     requests_cpu: "{{ ttrss_container_requests_cpu | default('100m') }}"
@@ -33,7 +34,8 @@ ttrss:
 
 ttrss_pgsql:
   container:
-    image: "postgres:11.1"
+    image: "postgres"
+    tag: "11.1"
     requests_cpu: "{{ ttrss_pgsql_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ ttrss_pgsql_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ ttrss_pgsql_container_limits_cpu | default('500m') }}"
