--- a/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/tasks/main.yml
@@ -8,7 +8,7 @@
       path: "{{ role_path }}/app/build"
       pull: yes
       args:
-        from_image: "{{ homeassistant.container.from_image }}"
+        from_image: "{{ homeassistant.container.from_image }}:{{ homeassistant.container.from_tag }}"
     push: yes
 
 - name: Deploy Home Assistant
