--- a/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
@@ -8,7 +8,7 @@
       path: "{{ role_path }}/app/build"
       pull: yes
       args:
-        from_image: "{{ fluentd.container.from_image }}"
+        from_image: "{{ fluentd.container.from_image }}:{{ fluentd.container.from_tag }}"
     push: yes
 
 - name: List included config files
