--- a/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
@@ -8,7 +8,7 @@
       path: "{{ role_path }}/app/build"
       pull: yes
       args:
-        from_image: "{{ heimdall.container.from_image }}"
+        from_image: "{{ heimdall.container.from_image }}:{{ heimdall.container.from_tag }}"
     push: yes
 
 - name: Deploy Heimdall
