--- a/ansible/install_applications/vars/auth-lemonldap.yml
+++ b/ansible/install_applications/vars/auth-lemonldap.yml
@@ -6,7 +6,8 @@ lemonldap:
   container:
     image: "{{ docker_registry.url }}/lemonldap"
     tag: "latest"
-    from_image: "coudot/lemonldap-ng:2.0.3"
+    from_image: "coudot/lemonldap-ng"
+    from_tag: "2.0.3"
     requests_cpu: "{{ lemonldap_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ lemonldap_container_requests_memory | default('384Mi') }}"
     limits_cpu: "{{ lemonldap_container_limits_cpu | default('200m') }}"
