--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -6,7 +6,8 @@ pyload:
   container:
     image: "{{ docker_registry.url }}/pyload"
     tag: "latest"
-    from_image: "lsiobase/python:amd64-3.9"
+    from_image: "lsiobase/python"
+    from_tag: "amd64-3.9"
     requests_cpu: "{{ pyload_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ pyload_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ pyload_container_limits_cpu | default('200m') }}"
