--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -7,7 +7,8 @@ nodered:
   container:
     image: "{{ docker_registry.url }}/nodered"
     tag: "latest"
-    from_image: "nodered/node-red-docker:0.20.6-slim-v10"
+    from_image: "nodered/node-red-docker"
+    from_tag: "0.20.6-slim-v10"
     requests_cpu: "{{ nodered_container_requests_cpu | default('250m') }}"
     requests_memory: "{{ nodered_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ nodered_container_limits_cpu | default('500m') }}"
