Add force_source parameter on docker_image to enable from_image updates

--- a/ansible/install_applications/roles/auth-lemonldap.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/tasks/main.yml
@@ -9,6 +9,7 @@
       pull: yes
       args:
         from_image: "{{ lemonldap.container.from_image }}:{{ lemonldap.container.from_tag }}"
+    force_source: yes
     push: yes
 
 - name: Deploy LemonLDAP
