--- a/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/tasks/main.yml
@@ -9,6 +9,7 @@
       pull: yes
       args:
         from_image: "{{ fluentd.container.from_image }}:{{ fluentd.container.from_tag }}"
+    force_source: yes
     push: yes
 
 - name: List included config files
