--- a/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-heimdall.deploy/tasks/main.yml
@@ -9,6 +9,7 @@
       pull: yes
       args:
         from_image: "{{ heimdall.container.from_image }}:{{ heimdall.container.from_tag }}"
+    force_source: yes
     push: yes
 
 - name: Deploy Heimdall
