--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/tasks/main.yml
@@ -13,6 +13,7 @@
     build:
       path: "{{ release_watcher.path }}"
       pull: yes
+    force_source: yes
     push: yes
 
 - name: Deploy release-watcher
