--- a/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/web-ttrss.deploy/tasks/main.yml
@@ -9,6 +9,7 @@
       pull: yes
       args:
         from_image: "{{ ttrss.container.from_image }}:{{ ttrss.container.from_tag }}"
+    force_source: yes
     push: yes
 
 # We can't just use a lookup('url', ttrss_pgsql.schema_url) to inject the schema file directly.
