--- a/ansible/install_applications/roles/download-pyload.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-pyload.deploy/tasks/main.yml
@@ -9,6 +9,8 @@
       pull: yes
       args:
         from_image: "{{ pyload.container.from_image }}:{{ pyload.container.from_tag }}"
+        PYLOAD_BRANCH: "{{ pyload.container.branch }}"
+        PYLOAD_RELEASE: "{{ pyload.container.commit }}"
     force_source: yes
     push: yes
 
