--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -8,6 +8,8 @@ pyload:
     tag: "latest"
     from_image: "lsiobase/python"
     from_tag: "amd64-3.10"
+    branch: "stable"
+    commit: "1212a684f94856181ad227ff5da140045a95ea8f"
     requests_cpu: "{{ pyload_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ pyload_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ pyload_container_limits_cpu | default('200m') }}"
