--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/defaults/main.yml
@@ -5,7 +5,7 @@ elasticsearch_enabled: true
 #elasticsearch_internal_users:
 #  - name: userName
 #    password: clear_password
-#    readonly: True
-#    roles:
-#      - role1
-#      - role2
+#    reserved: True
+#    backend_roles:
+#      - role_1
+#      - role_2
