--- a/ansible/install_applications/vars/logging-kibana.yml
+++ b/ansible/install_applications/vars/logging-kibana.yml
@@ -5,11 +5,13 @@ kibana:
 
   container:
     image: "amazon/opendistro-for-elasticsearch-kibana"
-    tag: "0.9.0"
-    requests_cpu: "{{ kibana_container_requests_cpu | default('100m') }}"
-    requests_memory: "{{ kibana_container_requests_memory | default('512Mi') }}"
+    tag: "1.0.1"
+    requests_cpu: "{{ kibana_container_requests_cpu | default('1000m') }}"
+    requests_memory: "{{ kibana_container_requests_memory | default('2048Mi') }}"
     limits_cpu: "{{ kibana_container_limits_cpu | default('1000m') }}"
-    limits_memory: "{{ kibana_container_limits_memory | default('512Mi') }}"
+    limits_memory: "{{ kibana_container_limits_memory | default('2048Mi') }}"
+  
+  nodejs_max_memory: "{{ kibana_nodejs_max_memory | default('1500') }}"
 
   context_path: "{{ kibana_context_path | default('/kibana') }}"
   
