Add workaround for the Kibana type mapping

--- a/ansible/install_applications/roles/logging-kibana.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/logging-kibana.deploy/tasks/main.yml
@@ -37,8 +37,12 @@
   register: kibana_available
   until:
   - kibana_available.status == 200
-  retries: 18
+  retries: 30
   delay: 10
+
+# TODO : remove once kibana is updated to 7.2
+- name: Workaround for kibana 'type' mapping
+  import_tasks: type_mapping_workaround.yml
 
 - name: List Kibana saved objects
   set_fact:
