Remove unused variables for release_watcher repo

--- a/ansible/install_applications/vars/monitoring-release-watcher.yml
+++ b/ansible/install_applications/vars/monitoring-release-watcher.yml
@@ -12,7 +12,7 @@ release_watcher:
     limits_memory: "{{ release_watcher_container_limits_memory | default('64Mi') }}"
 
   repo:
-    url: "{{ release_watcher_repo_url | default('https://github.com/Neraud/release-watcher') }}"
-    version: "{{ release_watcher_repo_version | default('master') }}"
+    url: "https://github.com/Neraud/release-watcher"
+    version: "master"
   
   path: "{{ release_watcher_path | default('/opt/release-watcher') }}"
