--- a/ansible/install_applications/vars/monitoring-release-watcher.yml
+++ b/ansible/install_applications/vars/monitoring-release-watcher.yml
@@ -13,6 +13,6 @@ release_watcher:
 
   repo:
     url: "https://github.com/Neraud/release-watcher"
-    version: "master"
+    version: "d4fbba5280b873da3ff2d259acaa9da32b8474a9"
   
   path: "{{ release_watcher_path | default('/opt/release-watcher') }}"
