Install APC Daemon

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -23,6 +23,11 @@
   roles:
     - dns-client
 
+- name: Prepare APC UPS
+  hosts: apcups
+  roles:
+    - apcups
+
 - name: Provision Reverse Proxies
   hosts: loadbalancers
   roles:
