--- a/ansible/install_infra/roles/apcups/defaults/main.yml
+++ b/ansible/install_infra/roles/apcups/defaults/main.yml
@@ -1,5 +1,9 @@
 ---
 
+kubernetes_user:
+  name: "{{ standard_user.name }}"
+  home: "{{ standard_user.home }}"
+
 apcups_name: APC UPS
 apcups_cable: usb
 apcups_upstype: usb
