--- a/ansible/install_applications/vars/monitoring-exporters.yml
+++ b/ansible/install_applications/vars/monitoring-exporters.yml
@@ -6,7 +6,8 @@ kubernetes_exporters:
 
 kubernetes_exporter_kube_state_metrics:
   container:
-    image: "quay.io/coreos/kube-state-metrics"
+    repo: quay.io
+    image: "coreos/kube-state-metrics"
     tag: "v1.5.0"
     requests_cpu: "{{ kube_state_metrics_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ kube_state_metrics_container_requests_memory | default('150Mi') }}"
@@ -16,7 +17,8 @@ kubernetes_exporter_kube_state_metrics:
 
 kubernetes_exporter_node_exporter:
   container:
-    image: "quay.io/prometheus/node-exporter"
+    repo: quay.io
+    image: "prometheus/node-exporter"
     tag: "v0.17.0"
     requests_cpu: "{{ node_exporter_container_requests_cpu | default('102m') }}"
     requests_memory: "{{ node_exporter_container_requests_memory | default('180Mi') }}"
