--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/kubernetes_alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/rules/kubernetes_alerts.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: prometheus-k8s-alerts
+  name: kubernetes-alerts
   namespace: monitoring
   labels:
     app: prometheus
