Split 'monitoring-exporters' in 2 roles

--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/meta/main.yml
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/meta/main.yml
@@ -3,7 +3,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Deploy application monitoring-exporters"
+  description: "Deploy application monitoring-kube-state-metrics"
   min_ansible_version: 2.7
   platforms:
   - name: Debian
