Fix kube-state-metrics deployment always changed

--- a/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
+++ b/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
@@ -7,7 +7,10 @@ kube_state_metrics:
     repo: quay.io
     image: "coreos/kube-state-metrics"
     tag: "v1.7.2"
-    requests_cpu: "{{ kube_state_metrics_container_requests_cpu | default('100m') }}"
-    requests_memory: "{{ kube_state_metrics_container_requests_memory | default('150Mi') }}"
-    limits_cpu: "{{ kube_state_metrics_container_limits_cpu | default('100m') }}"
-    limits_memory: "{{ kube_state_metrics_container_limits_memory | default('150Mi') }}"
+    # Kube-state-metrics uses an auto-scaler, so it doesn't have the usual requests and limits.
+    # It has a base value, and an extra value.
+    # The used resource is : base + extra * number_of_pods
+    base_cpu: "{{ kube_state_metrics_container_base_cpu | default('100m') }}"
+    base_memory: "{{ kube_state_metrics_container_base_memory | default('150Mi') }}"
+    extra_cpu: "{{ kube_state_metrics_container_extra_cpu | default('2m') }}"
+    extra_memory: "{{ kube_state_metrics_container_extra_memory | default('30Mi') }}"
