--- a/vagrant/Vagrantconfig.yaml
+++ b/vagrant/Vagrantconfig.yaml
@@ -1,40 +1,39 @@
 ---
-
 common:
   box_name: debian/contrib-buster64
   box_version: 10.0.0
   # Name of the storage controller to add the DATA disk.
   # To find the exact name, start the box a first time and look at the storage settings in VirtualBox
-  sata_controller_name: 'SATA Controller'
+  sata_controller_name: "SATA Controller"
   network_cidr: 192.168.100.0/24
 
 controller:
-  name: 'master-1'
-  cpu: 2
-  cpu_execution_cap: 50
-  memory: 2048
+  name: "master-1"
+  cpu: 3
+  cpu_execution_cap: 33
+  memory: 6144
   ip: 192.168.100.11
   docker_disk_size: 16384
   data_disk_size: 8192
 
 nodes:
-  - name: 'master-2'
-    cpu: 4
-    cpu_execution_cap: 50
-    memory: 8192
+  - name: "master-2"
+    cpu: 6
+    cpu_execution_cap: 33
+    memory: 6144
     ip: 192.168.100.12
     docker_disk_size: 32768
     data_disk_size: 65536
-  - name: 'master-3'
+  - name: "master-3"
     cpu: 6
-    cpu_execution_cap: 50
-    memory: 8192
+    cpu_execution_cap: 33
+    memory: 6144
     ip: 192.168.100.13
     docker_disk_size: 32768
     data_disk_size: 65536
-  - name: 'node-home'
+  - name: "node-home"
     cpu: 2
-    cpu_execution_cap: 50
+    cpu_execution_cap: 33
     memory: 1024
     ip: 192.168.100.14
     docker_disk_size: 8192
