Add nginx-exporter and dashboard

--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -68,6 +68,10 @@
   tags: kubernetes-app-monitoring-node-exporter
   when: node_exporter_enabled | bool
 
+- import_playbook: app-monitoring-nginx-exporter.yml
+  tags: kubernetes-app-monitoring-nginx-exporter
+  when: nginx_exporter_enabled | bool
+
 - import_playbook: app-monitoring-gluster-exporter.yml
   tags: kubernetes-app-monitoring-gluster-exporter
   when: gluster_exporter_enabled | bool
