Disable edition on grafana dashboards

--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/nginx.json
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/nginx.json
@@ -13,7 +13,7 @@
         ]
     },
     "description": "Official dashboard for NGINX Prometheus exporter",
-    "editable": true,
+    "editable": false,
     "gnetId": null,
     "graphTooltip": 0,
     "id": 31,
