--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/ingress-nginx.json
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/ingress-nginx.json
@@ -57,7 +57,7 @@
       }
     ]
   },
-  "editable": true,
+  "editable": false,
   "gnetId": null,
   "graphTooltip": 0,
   "iteration": 1534359654832,
@@ -485,7 +485,7 @@
       "dashes": false,
       "datasource": "${DS_PROMETHEUS}",
       "decimals": 2,
-      "editable": true,
+      "editable": false,
       "error": false,
       "fill": 1,
       "grid": {},
@@ -696,7 +696,7 @@
       "dashes": false,
       "datasource": "${DS_PROMETHEUS}",
       "decimals": 2,
-      "editable": true,
+      "editable": false,
       "error": false,
       "fill": 1,
       "grid": {},
