--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/gitlab-nginx.json
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/dashboards/gitlab-nginx.json
@@ -495,7 +495,7 @@
     "schemaVersion": 18,
     "style": "dark",
     "tags": [
-        "Gitlab"
+        "gitlab"
     ],
     "templating": {
         "list": [
